src/renderer/App.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  padding: 0;
  overflow: hidden;
  overflow-x: hidden !important;
  font-size: 8pt;
}

header {
  background: #173a64 url(../../assets/background.png) center center;
  color: #fff;
  padding: 5px;
  height: 55px;
}

#logo {
  padding: 5px;
  background: #fff;
  border-radius: 10px;
  float: left;
  margin-top: -6px;
}

#container {
  height: 100%;
  width: 100%;
  font-size: 0;
}

#content {
  background: #fff;
  color: #000;
  padding: 1px;
  min-height: 400px;
  margin: 1px;
  margin-top: 3px !important;
}

#buttons {
  text-align: right;
  width: 15%;
  margin-top: 12px;
  margin-left: 32px;
}

#apps,
#buttons,
#headnote {
  display: inline-block;
  *display: inline;
  zoom: 1;
  vertical-align: top;
  font-size: 12px;
}

#headnote {
  width: 22%;
}

#apps a {
  margin: 4px;
  width: 55%;
}

#apps {
  margin-top: 16px;
  margin-left: 16px;
}

.twoColumn {
  -webkit-column-count: 2;
     -moz-column-count: 2;
          column-count: 2;

  -webkit-column-gap: 20px;
     -moz-column-gap: 20px;
          column-gap: 20px;
}

.link-WebUntis img {
  background: #ff9900 !important;
}

.link-Miro img {
  background: #ffcf00 !important;
}

.link-SchulCloud img {
  background: #fac229 !important;
}

h1,
h2,
h3 {
  font-weight: 300;
  color: #ffb606;
  line-height: 1;
}

h1 {
  font-size: 12pt;
  line-height: 0;
  padding-top: 8px;
  padding-left: 10px;
}

.loader {
  width: 48px;
  height: 40px;
  margin-top: 30px;
  display: inline-block;
  position: relative;
  background: #fff;
  border-radius: 15% 15% 35% 35%;
}

.loader::after {
  content: '';
  box-sizing: border-box;
  position: absolute;
  left: 45px;
  top: 8px;
  border: 4px solid #fff;
  width: 16px;
  height: 20px;
  border-radius: 0 4px 4px 0;
}

.loader::before {
  content: '';
  position: absolute;
  width: 1px;
  height: 10px;
  color: #fff;
  top: -15px;
  left: 11px;
  box-sizing: border-box;
  animation: animloader 1s ease infinite;
}

@keyframes animloader {
  0% {
    box-shadow: 2px 0px rgba(255, 255, 255, 0),
      12px 0px rgba(255, 255, 255, 0.3), 20px 0px rgba(255, 255, 255, 0);
  }
  50% {
    box-shadow: 2px -5px rgba(255, 255, 255, 0.5),
      12px -3px rgba(255, 255, 255, 0.5), 20px -2px rgba(255, 255, 255, 0.6);
  }
  100% {
    box-shadow: 2px -8px rgba(255, 255, 255, 0),
      12px -5px rgba(255, 255, 255, 0), 20px -5px rgba(255, 255, 255, 0);
  }
}

#loading,
#error {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

#loading small {
  margin-left: 7px;
}

#main {
  text-align: center;
}

.app img {
  background: #fff;
  padding: 4px;
  border-radius: 4px;
}

.wv {
  display: inline-flex;
  width: calc(100vw + 2px);
  height: calc(100vh - 70px);
  margin-left: -4px;
  margin-top: -4px;
}

#settings {
  background: url(../../assets/background2.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  margin: 0 -20px;
  padding: 20px;
}

#settingsb {
  background: #fff;
  padding: 4px;
  border-radius: 4px;
  width: 20px;
  height: 20px;
  margin-top: 16px;
  margin-left: 4px;
  cursor: pointer;
}

@media(max-height:800px) {
  .wv {
    width: calc(100vw + 3px) !important;
    height: calc(100vh - 70px) !important;
  }
}

#settingsv {
  text-align: left !important;
  padding: 20px;
  background: #173a64;
  color: #fff;
  border-radius: 4px;
  width: 50%;
  margin: 20px auto;
}

input {
  margin: .4rem 0;
  margin-right: .4rem;
}

#settingsv button {
  display: block;
  background: #173a64;
  color: #fff;
  border: 1px solid;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 11pt;
  padding: 5px;
  border-radius: 3px;
  margin: 6px 0;
  margin-top: 40px;
}

#settingsv h1 {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 100;
  font-size: 22pt;
  margin-left: -10px;
}

#settingsv h2 {
  margin-top: 40px;
  margin-bottom: 0;
}

.error {
  color: red;
  font-weight: bold;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 11pt;
}

